--- a/src/flux.html
+++ b/src/flux.html
@@ -117,7 +117,7 @@
           <div class="flex-item"><img src="./assets/images/7.1.flux.png" alt="flux identidad corporativa"
               data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item flex-item2"><img src="./assets/images/7.2.flux.png" alt="flux identidad corporativa"
-              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+             data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/7.3.flux.png" alt="flux identidad corporativa" loading="lazy"
               data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/7.4.flux.png" alt="flux identidad corporativa" loading="lazy"
