--- a/src/gig.html
+++ b/src/gig.html
@@ -107,7 +107,7 @@
       <div>
         <div class="flex-container">
           <div class="flex-item"><img src="./assets/images/2.1.gig.png" alt="GIG Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item flex-top"><img src="./assets/images/2.2.gig.png" alt="GIG Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item flex-top"><img src="./assets/images/2.2.gig.png" alt="GIG Web" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/2.3.gig.png" alt="GIG Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/2.4.gig.png" alt="GIG Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/2.5.gig.png" alt="GIG Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
