--- a/src/maow.html
+++ b/src/maow.html
@@ -113,7 +113,7 @@
       <div>
         <div class="flex-container">
           <div class="flex-item"><img src="./assets/images/3.1.maow.png" alt="Maow Web" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item flex-top"><img src="./assets/images/3.2.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item flex-top"><img src="./assets/images/3.2.maow.png" alt="Maow Web" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/3.3.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/3.4.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/3.5.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
