--- a/src/radicaleslibres.html
+++ b/src/radicaleslibres.html
@@ -114,7 +114,7 @@
           <div class="flex-item flex-cartel"><img src="./assets/images/9.1.radicales-libres.jpg" alt="Radicales Libres"
                data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item flex-cartel flex-item2"><img src="./assets/images/9.2.radicales-libres.jpg"
-              alt="Radicales Libres" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+              alt="Radicales Libres"  data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item flex-instagram insta-1">
             <img src="./assets/images/9.3.radicales-libres.jpg" alt="Radicales Libres" loading="lazy" data-aos="fade-up"
               data-aos-duration="1000">
