--- a/src/maow.html
+++ b/src/maow.html
@@ -101,7 +101,7 @@
           búsqueda de cuidadores. Además, las protectoras serán unas de las grandes beneficiadas, ya que el resto de
           usuarios podrán hacerles donaciones y apadrinar a los gatos que tengan en sus instalaciones.
         </p>
-        <p  data-aos="fade-up" data-aos-duration="1000" class="project-link">El presente proyecto corresponde a mi trabajo de fin de grado en diseño gráfico, para conocerlo en mayor profundidad puedes acceder a su <a href="https://drive.google.com/drive/folders/1i28WpVympNG2zuBm23oYhVk8BtQu8o3Q?usp=sharing" download="Curriculum vitae" >memoria</a>.</p>
+        <p  data-aos="fade-up" data-aos-duration="1000" class="project-link">El presente proyecto corresponde a mi trabajo de fin de grado en diseño gráfico, para conocerlo en mayor profundidad puedes acceder a su <a href="https://drive.google.com/file/d/178hmVHlcHZPpk5JViQ7Z989lszLoDJW-/view?usp=sharing" target="_blank" download="TFG" >memoria</a>.</p>
         <div class="program"  data-aos="fade-up" data-aos-duration="1000">
 
           <img src="./assets/images/figma.png" alt="Figma icon">
