--- a/src/index.html
+++ b/src/index.html
@@ -517,7 +517,7 @@
             </div>
             <ul class="english last-ul">
               <li>Nivel intermedio hablado y escrito (B2)</li>
-              <li>Santander Scholarships Language | English to Boost your Career - University of Pennsylvania</li>
+              <li><a style="cursor: pointer; color: #94c7fd;" href="https://drive.google.com/file/d/10bZv5tojYggEJ4YkHBsflNSNRp24DiyD/view?usp=sharing"> Scholarships Language | English to Boost your Career - University of Pennsylvania</a></li>
             </ul>
           </div>
         </section>
